--- a/css/style-prefixed.css
+++ b/css/style-prefixed.css
@@ -27,7 +27,8 @@ body {
     border-radius: 10px;
     background-color: #27ae60;
     color: #fff;
-    font-size: 16px; }
+    font-size: 16px;
+    cursor: pointer; }
 
 .column-container {
   display: -webkit-box;
@@ -42,42 +43,47 @@ body {
       flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center; }
+          justify-content: center;
+  border-radius: 10px; }
   .column-container .column {
     position: relative;
     -ms-flex-item-align: start;
         align-self: flex-start;
     width: 30%;
     margin: 15px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.5); }
+    padding-bottom: 30px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px; }
     .column-container .column .column-title {
       padding: 10px;
-      background-color: #95a5a6; }
+      background-color: #95a5a6;
+      border-radius: 10px 10px 0 0; }
     .column-container .column .add-card {
       z-index: 1;
       position: absolute;
-      bottom: 0px;
-      right: 5%;
+      bottom: 0;
+      right: 0;
       height: 40px;
       width: 40px;
       border: 5px solid #27ae60;
-      border-radius: 20px;
+      border-radius: 0 0 10px 0;
       background-color: #27ae60;
       font-size: 25px;
       font-weight: 700;
-      color: #fff; }
+      color: #fff;
+      cursor: pointer; }
     .column-container .column .btn-delete {
       position: absolute;
       top: 0;
       right: 0;
-      width: 40px;
-      height: 40px;
+      width: 49px;
+      height: 49px;
       border: none;
-      border-radius: 10px;
+      border-radius: 0 10px 0 0;
       background-color: #ffc042;
       font-weight: 900;
-      font-size: 20px; }
+      font-size: 20px;
+      cursor: pointer; }
   .column-container .column ul {
     padding: 10px;
     list-style-type: none;
