--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,7 @@ body{
         background-color: #27ae60;
         color: #fff;
         font-size: 16px;
+        cursor: pointer;
     }
 }
 
@@ -35,46 +36,51 @@ body{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    border-radius: 10px;
     
     .column{
         position: relative;
         align-self: flex-start;
         width: 30%;
         margin: 15px;
-        border-radius: 10px;
+        padding-bottom: 30px;
         background-color: rgba(255,255,255,.5);
+        border-radius: 10px;
     
         .column-title{
             padding: 10px;
             background-color: #95a5a6;
+            border-radius: 10px 10px 0 0;
         }
     
         .add-card{
             z-index: 1;
             position: absolute;
-            bottom: 0px;
-            right: 5%;
+            bottom: 0;
+            right: 0;
             height: 40px;
             width: 40px;
             border: 5px solid #27ae60;
-            border-radius: 20px;
+            border-radius: 0 0 10px 0;
             background-color: #27ae60;
             font-size: 25px;
             font-weight: 700;
             color: #fff;
+            cursor: pointer;
         }
         
         .btn-delete{
             position: absolute;
             top: 0;
             right: 0;
-            width: 40px;
-            height: 40px;
+            width: 49px;
+            height: 49px;
             border: none;
-            border-radius: 10px;
+            border-radius: 0 10px 0 0;
             background-color: #ffc042;
             font-weight: 900;
             font-size: 20px;
+            cursor: pointer;
         }
     }
 
