--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,10 @@ body{
         color: #fff;
         font-size: 16px;
         cursor: pointer;
+        @media(max-width: 500px){
+            height: 60px;
+            font-size: 14px;
+        }
     }
 }
 
@@ -46,6 +50,12 @@ body{
         padding-bottom: 30px;
         background-color: rgba(255,255,255,.5);
         border-radius: 10px;
+        @media(max-width: 900px){
+            width: 40%; 
+        }
+        @media(max-width: 500px){
+            width: 100%;
+        }   
     
         .column-title{
             padding: 10px;
@@ -116,3 +126,5 @@ body{
         }
     }
 }
+
+
